# zeta-python-sdk

./: .gitignore  LICENSE  pyproject.toml
tests/: test_zeta_python_sdk.py
zeta_python_sdk/: constants.py  errors.py  events.py  exceptions.py  networks.py  oracle_utils.py  program_types.py  types.py
zeta_python_sdk/idl/: zeta.json
